# franklin

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SUPPORT.md  pyproject.toml
.github/workflows/: ci.yml  homebrew-bump.yml  publish.yml  release.yml
docs/: homebrew.md  releasing.md
docs/release-notes/: v0.1.0.md
src/franklin/: __init__.py  _license_public_key.pem  checkpoint.py  classify.py  cli.py  doctor.py  errors.py  estimate.py  grading.py  inspector.py  installer.py  license.py  picker.py  publisher.py  review.py  schema.py  secrets.py
src/franklin/assembler/: __init__.py  frontmatter.py  links.py  manifest.py  packager.py  readme.py  templates.py
src/franklin/commands/: __init__.py  diagnostics.py  operations.py  pick.py  publishing.py  stages.py
src/franklin/ingest/: __init__.py  cleanup.py  epub.py  pdf.py
src/franklin/llm/: __init__.py  client.py  models.py  prompts.py  (+1 more)
tests/: _fakes.py  test_assemble_service.py  test_assembler.py  test_async_services.py  test_classify.py  test_cleanup.py  test_cleanup_async.py  test_cli_gates.py  test_cli_grade.py  test_cli_install_scopes.py  test_cli_new_commands.py  test_cli_pick.py  test_cli_run.py  test_cli_run_resume.py  test_doctor.py  test_errors.py  test_estimate.py  test_generators.py  test_golden_path.py  test_grading.py  test_ingest.py  test_ingest_pdf.py  test_ingest_service.py  test_inspector.py  test_installer.py  test_license.py  test_license_status.py  test_llm.py  test_map_service.py  test_mapper.py  test_metadata_confirm.py  test_picker.py  test_plan_service.py  test_planner.py  test_progress_bridge.py  test_publisher.py  test_reduce_service.py  test_resolver.py  test_review.py  test_runs_list.py  (+4 more)
tests/fixtures/: license_private_key.pem
(+23 files in other folders)
